--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "notistack": "^3.0.2",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
